--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "livewire/livewire": "^2.5",
+        "simplesoftwareio/simple-qrcode": "^4.2",
         "twilio/sdk": "^6.42"
     },
     "require-dev": {
