--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "vite": "^3.0.0"
     },
     "dependencies": {
+        "bootstrap-icons": "^1.9.1",
         "instascan": "^1.0.0"
     }
 }
