--- a/package.json
+++ b/package.json
@@ -2,18 +2,20 @@
     "private": true,
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "watch": "vite build --watch"
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
         "@tailwindcss/typography": "^0.5.0",
         "alpinejs": "^3.0.6",
-        "autoprefixer": "^10.4.7",
+        "autoprefixer": "^10.4.13",
         "axios": "^0.27",
+        "laravel-mix": "^6.0.49",
         "laravel-vite-plugin": "^0.6.0",
         "lodash": "^4.17.19",
-        "postcss": "^8.4.14",
-        "tailwindcss": "^3.1.0",
+        "postcss": "^8.4.19",
+        "tailwindcss": "^3.2.4",
         "vite": "^3.0.0"
     },
     "dependencies": {
