--- a/.env.example
+++ b/.env.example
@@ -29,12 +29,14 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_HOST=smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=2ce1abb07a358f
+MAIL_PASSWORD=06a7ddcd3d1aa2
+MAIL_ENCRYPTION=tls
+
+
+MAIL_FROM_ADDRESS=dapitanhealthcenter9@gmail.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
