--- a/composer.json
+++ b/composer.json
@@ -54,7 +54,9 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
-        ]
+        ],
+        "heroku-prebuild": "npm install --dev",
+        "heroku-postbuild": "npm run prod"
     },
     "extra": {
         "laravel": {
