--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "kyslik/column-sortable": "^6.4",
         "laravel/framework": "^9.19",
         "laravel/jetstream": "^2.11",
+        "laravel/nexmo-notification-channel": "^3.0",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "livewire/livewire": "^2.5",
