--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
     "scripts": {
         "dev": "vite",
         "build": "vite build",
-        "watch": "vite build --watch",
-        "production": "mix --production"
+        "watch": "vite build --watch"
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
@@ -12,12 +11,11 @@
         "alpinejs": "^3.0.6",
         "autoprefixer": "^10.4.13",
         "axios": "^0.27",
-        "laravel-mix": "^6.0.49",
-        "laravel-vite-plugin": "^0.6.0",
+        "laravel-vite-plugin": "^0.6.1",
         "lodash": "^4.17.19",
         "postcss": "^8.4.19",
         "tailwindcss": "^3.2.4",
-        "vite": "^3.0.0"
+        "vite": "^3.2.5"
     },
     "dependencies": {
         "bootstrap-icons": "^1.9.1",
